--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <script src="http://www.google.com/jsapi" type="text/javascript"></script> 
 <script type="text/javascript">google.load("jquery", "1.3.2");</script>
-
+		<!-- font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;  -->
 <style type="text/css">
 	body {
-		font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+		font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 		font-weight:300;
-		font-size:18px;
+		font-size:26px;
 		margin-left: auto;
 		margin-right: auto;
-		width: 1100px;
+		width: 1400px;
 	}
 	
 	h1 {
@@ -118,10 +118,10 @@
 
 <html>
 <head>
-	<title>This is my paper title</title>
-	<meta property="og:image" content="Path to my teaser.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
-	<meta property="og:title" content="Creative and Descriptive Paper Title." />
-	<meta property="og:description" content="Paper description." />
+	<title>ExPT: Synthetic Pretraining for Few-Shot Experimental Design</title>
+	<meta property="og:image" content="./resources/approach.png"/> <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
+	<meta property="og:title" content="ExPT: Synthetic Pretraining for Few-Shot Experimental Design" />
+	<meta property="og:description" content="ExPT: Synthetic Pretraining for Few-Shot Experimental Design" />
 
 	<!-- Get from Google Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -138,149 +138,209 @@
 <body>
 	<br>
 	<center>
-		<span style="font-size:36px">Creative and Descriptive Paper Title</span>
-		<table align=center width=600px>
-			<table align=center width=600px>
+		<span style="font-size:36px">ExPT: Synthetic Pretraining for Few-Shot Experimental Design</span>
+		<br>
+		<br>
+		<table align=center width=700px>
+			<table align=center width=650px>
 				<tr>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">First Author</a></span>
+							<span style="font-size:26px"><a href="https://tung-nd.github.io/">Tung Nguyen</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Second Author</a></span>
+							<span style="font-size:26px"><a href="https://www.linkedin.com/in/sudhanshu-agrawal/">Sudhanshu Agrawal</a></span>
 						</center>
 					</td>
 					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href="https://en.wikipedia.org/wiki/James_J._Gibson">Third Author</a></span>
+							<span style="font-size:26px"><a href="https://aditya-grover.github.io/">Aditya Grover</a></span>
 						</center>
 					</td>
 				</tr>
 			</table>
-			<table align=center width=250px>
+			<br>
+			<table align=center width=450px>
 				<tr>
-					<td align=center width=120px>
+					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href=''>[Paper]</a></span>
+							<span style="font-size:26px"><a href='https://arxiv.org/abs/2310.19961'>[Paper]</a></span>
 						</center>
 					</td>
-					<td align=center width=120px>
+					<td align=center width=100px>
 						<center>
-							<span style="font-size:24px"><a href='https://github.com/richzhang/webpage-template'>[GitHub]</a></span><br>
+							<span style="font-size:26px"><a href='https://github.com/tung-nd/ExPT'>[GitHub]</a></span><br>
+						</center>
+					</td>
+					<td align=center width=100px>
+						<center>
+							<span style="font-size:26px"><a href='https://github.com/tung-nd/ExPT'>[FILL Blogpost]</a></span><br>
 						</center>
 					</td>
 				</tr>
 			</table>
 		</table>
 	</center>
-
+	<br>
 	<center>
-		<table align=center width=850px>
+		<span style="font-size:24px"> <i>In NeurIPS 2023</i></span>
+		<table align=center width=1000px>
 			<tr>
-				<td width=260px>
+				<td width=400px>
 					<center>
-						<img class="round" style="width:500px" src="./resources/teaser.png"/>
+						<img class="round" style="width:300px; height:300px" src="./resources/ant.gif"/>
+					</center>
+				</td>
+				<td width=400px>
+					<center>
+						<img class="round" style="width:300px; height:300px" src="./resources/ant_vy.gif/">
+					</center>
+				</td>
+				<td width=400px>
+					<center>
+						<img class="round" style="width:300px; height:300px" src="./resources/ant_energy.gif"/>
 					</center>
 				</td>
 			</tr>
+			<br>
 		</table>
-		<table align=center width=850px>
-			<tr>
-				<td>
-					This was a template originally made for <a href="http://richzhang.github.io/colorization/">Colorful Image Colorization</a>. The code can be found in this <a href="https://github.com/richzhang/webpage-template">repository</a>.
-				</td>
-			</tr>
-		</table>
-	</center>
-
-	<hr>
-
-	<table align=center width=850px>
-		<center><h1>Abstract</h1></center>
-		<tr>
-			<td>
-				This is my abstract.
-			</td>
-		</tr>
-	</table>
-	<br>
-
-	<hr>
-	<center><h1>Talk</h1></center>
-	<p align="center">
-		<iframe width="660" height="395" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
-	</p>
-
-	<table align=center width=800px>
-		<br>
-		<tr>
-			<center>
-				<span style="font-size:28px"><a href=''>[Slides]</a>
-				</span>
-			</center>
-		</tr>
-	</table>
-	<hr>
-
-	<center><h1>Code</h1></center>
-
-	<table align=center width=420px>
-		<center>
-			<tr>
-				<td>
-				</td>
-			</tr>
-		</center>
-	</table>
-	<table align=center width=400px>
-		<tr>
-			<td align=center width=400px>
+	<table>
+		<tr> 
+			<td style="width:1000px; font-size:20px">
 				<center>
-					<td><img class="round" style="width:450px" src="./resources/method_diagram.png"/></td>
+				A single pretrained ExPT foundation model can be used in a few-shot setting to generate designs for multiple independent objectives: for example, robots optimizing for horizontal speed, vertical speed while maintaining horizontal motion, and energy used while travelling.
 				</center>
 			</td>
 		</tr>
 	</table>
-	<table align=center width=850px>
-		<center>
-			<tr>
-				<td>
-					Short description if wanted
-				</td>
-			</tr>
-		</center>
-	</table>
-	<table align=center width=800px>
-		<br>
-		<tr><center>
-			<span style="font-size:28px">&nbsp;<a href='https://github.com/richzhang/webpage-template'>[GitHub]</a>
-			</center>
-		</span>
-	</table>
-	<br>
+
+	</center>
+
 	<hr>
-	<table align=center width=450px>
-		<center><h1>Paper and Supplementary Material</h1></center>
+
+	<table align=center width=1000px style="font-size:20px">
+		<center><h1>Abstract</h1></center>
 		<tr>
-			<td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
-			<td><span style="font-size:14pt">F. Author, S. Author, T. Author.<br>
-				<b>Creative and Descriptive Paper Title.</b><br>
-				In Conference, 20XX.<br>
-				(hosted on <a href="">ArXiv</a>)<br>
-				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
-				<span style="font-size:4pt"><a href=""><br></a>
-				</span>
-			</td>
+			<td>
+				Experimental design for optimizing black-box functions is a fundamental problem
+				in many science and engineering fields. In this problem, sample efficiency is
+				crucial due to the time, money, and safety costs of real-world design evaluations.
+				Existing approaches either rely on active data collection or access to large, labeled
+				datasets of past experiments, making them impractical in many real-world scenarios.
+				In this work, we address the more challenging yet realistic setting of few-shot
+				experimental design, where only a few labeled data points of input designs and
+				their corresponding values are available. We introduce Experiment Pretrained
+				Transformers (ExPT), a foundation model for few-shot experimental design that
+				combines unsupervised learning and in-context pretraining. In ExPT, we only
+				assume knowledge of a finite collection of unlabelled data points from the input
+				domain and pretrain a transformer neural network to optimize diverse synthetic
+				functions defined over this domain. Unsupervised pretraining allows ExPT to
+				adapt to any design task at test time in an in-context fashion by conditioning on a
+				few labeled data points from the target task and generating the candidate optima.
+				We evaluate ExPT on few-shot experimental design in challenging domains and
+				demonstrate its superior generality and performance compared to existing methods.			</td>
 		</tr>
 	</table>
 	<br>
 
+	<hr>
+
+
+	<table align=center width=1000px style="font-size:20px">
+		<center><h1>A Foundation Model for Experimental Design</h1></center>
+		<tr>
+			<td width=300px>
+				<center>
+					<img class="round" style="width:500px" src="./resources/approach.png"/>
+				</center>
+			</td>
+		</tr>
+		<tr> 
+			<td width=300px>
+				ExPT follows a pretraining-adaptation approach in order to create and adapt a a foundation model for experimental design. In the pretraining phase, the model is given a large unlabeled dataset. The domain of the dataset can range from robot designs to DNA sequences. This unlabeled dataset is then used to create a synthetic dataset using a novel approach that uses Gaussian Processes to scale up the pretraining. During adaptation, the model is given a few real-world designs and their corresponding values and is able to produce new and high quality designs. 
+			</td>
+		</tr>
+	</table>
+	<br> 
+
+	<hr> 
+
+	<table align=center width=1000px style="font-size:20px">
+			<center><h1>Model Architecture</h1></center>
+		<tr>
+			<td width=300px>
+				<center>
+					<img class="round" style="width:500px" src="./resources/architecture.png"/>
+				</center>
+			</td>
+		</tr>
+		<tr> 
+			<td width=300px>
+				ExPT has an encoder-decoder architecture. A transformer-based encoder takes in context points <i>(y<sub>1</sub>,x<sub>1</sub>), ... (y<sub>m</sub>, x<sub>m</sub>)</i> as well as target <i>y</i> values <i> y<sub>m+1</sub>, ... , y<sub>N</sub> </i>to produce embeddings <i>h<sub>m+1</sub>, ... , h<sub>N</sub></i>. Then a VAE decoder generates designs <i>x<sub>m+1</sub>, ... , x<sub>N</sub></i> corresponding to the target objective values. 
+			</td>
+		</tr>
+	</table>
+	<br> 
+
+	<hr> 
+
+	<table align=center width=1000px style="font-size:20px">
+		<center><h1>Performance</h1></center>
+		
+		<tr> 
+			<td style="width:800px">
+				4 few-shot tasks are constructed using data from the Design-Bench benchmark. These are D'Kitty and Ant from the domain of robotics, and TFBind-8 and TFBind-10 from the domain of genetics. We consider two different scenarios consisting of 1% of the total available data. Both scenarios are few-shot settings and demonstrate the performance of the model even when the designs available are not high performing. 
+			</td>
+		</tr>
+	</table>
+	<br>
+	<table align=center width=1000px style="font-size:20px">
+
+		<tr>
+			<td style="width:200px">
+				The models are given access to the 1% worst-performing datapoints.
+			</td>
+			<td>
+				<center>
+					<img class="round" style="width:500px" src="./resources/poorest_bar_chart.png"/>
+				</center>
+			</td>
+		</tr>
+		<tr>
+			<td style="width:200px">
+				The models are given access to a random 1% subset of the datapoints.
+			</td>
+			<td >
+				<center>
+					<img class="round" style="width:500px" src="./resources/random_bar_chart.png"/>
+				</center>
+			</td>
+		</tr>
+	</table>
+	<br> 
+
+	<hr> 
+
+
+	<table align=center width=750 style="font-size:20px">
+		<center><h1>BibTeX</h1></center>
+		<tr>
+			<td><a href=""><img class="layered-paper-big" style="height:250px" src="./resources/paper-big.png"/></a></td>
+			<td><span style="font-size:20px">Tung Nguyen, Sudhanshu Agrawal, Aditya Grover<br>
+				<b>ExPT: Synthetic Pretraining for Few-Shot Experimental Design</b><br>
+				In NeurIPS, 2023.<br>
+				<!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
+				<br>
+				If you find our work useful, please consider citing us using the following BibTeX : 
+			</td>
+		</tr>
+	</table>
 	<table align=center width=600px>
 		<tr>
-			<td><span style="font-size:14pt"><center>
-				<a href="./resources/bibtex.txt">[Bibtex]</a>
+			<td><span style="font-size:24px"><center>
+				<a href="./resources/bibtex.txt">[BibTeX]</a>
 			</center></td>
 		</tr>
 	</table>
@@ -288,13 +348,12 @@
 	<hr>
 	<br>
 
-	<table align=center width=900px>
+	<table align=center width=900px style="font-size:20px">
 		<tr>
 			<td width=400px>
-				<left>
-					<center><h1>Acknowledgements</h1></center>
-					This template was originally made by <a href="http://web.mit.edu/phillipi/">Phillip Isola</a> and <a href="http://richzhang.github.io/">Richard Zhang</a> for a <a href="http://richzhang.github.io/colorization/">colorful</a> ECCV project; the code can be found <a href="https://github.com/richzhang/webpage-template">here</a>.
-				</left>
+				<center>
+					This website was made using a template which can be found <a href="https://github.com/richzhang/webpage-template">here</a>. 
+				</center>
 			</td>
 		</tr>
 	</table>
