fixed ant vy gif bug

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 				</td>
 				<td width=400px>
 					<center>
-						<img class="round" style="width:300px; height:300px" src="./resources/ant_vy.gif/">
+						<img class="round" style="width:300px; height:300px" src="./resources/ant_vy.gif"/>
 					</center>
 				</td>
 				<td width=400px>
