added blogpost link

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 				</tr>
 			</table>
 			<br>
-			<table align=center width=500px>
+			<table align=center width=600px>
 
 				<tr>
 					<td align=center width=120px>
@@ -177,13 +177,14 @@
 					</td>
 					<td align=center width=120px>
 						<center>
-							<span style="font-size:26px"><a href='https://github.com/tung-nd/ExPT'>[FILL Medium Blogpost]</a></span><br>
+							<span style="font-size:26px"><a href='https://medium.com/@sudhanshuagrawal2001/generative-ai-for-experimental-design-c25ee0c71e3f'>[Blogpost]</a></span><br>
 						</center>
 					</td>
 				</tr>
 			</table>
 		</table>
 	</center>
+	<br>
 	<center>
 		<span style="font-size:26px"> <i>In NeurIPS 2023</i></span>
 	</center>
