--- a/index.html
+++ b/index.html
@@ -338,7 +338,16 @@
 	<br> 
 
 
-	Further details about these experiments as well as other experimental setups, such as synthetic tasks, multi-objective tasks, and ablation studies comparing forward and inverse modeling can be found in Section 3 of the paper.  
+	<table align=center width=1000px style="font-size:20px">
+		
+		<tr> 
+			<td style="width:800px">
+				Further details about these experiments as well as other experimental setups, such as synthetic tasks, multi-objective tasks, and ablation studies comparing forward and inverse modeling can be found in Section 3 of the paper.  
+			</td>
+		</tr>
+	</table>
+
+
 
 	<hr> 
 
