--- a/index.html
+++ b/index.html
@@ -162,22 +162,22 @@
 				</tr>
 			</table>
 			<br>
-			<table align=center width=600px>
+			<table align=center width=700px>
 
 				<tr>
-					<td align=center width=120px>
+					<td align=center width=180px>
 						<center>
 							<span style="font-size:26px"><a href='https://arxiv.org/abs/2310.19961'>[Paper]</a></span>
 						</center>
 					</td>
-					<td align=center width=120px>
+					<td align=center width=180px>
 						<center>
 							<span style="font-size:26px"><a href='https://github.com/tung-nd/ExPT'>[GitHub]</a></span><br>
 						</center>
 					</td>
-					<td align=center width=120px>
+					<td align=center width=180px>
 						<center>
-							<span style="font-size:26px"><a href='https://medium.com/@sudhanshuagrawal2001/generative-ai-for-experimental-design-c25ee0c71e3f'>[Blogpost]</a></span><br>
+							<span style="font-size:26px"><a href='https://medium.com/@sudhanshuagrawal2001/generative-ai-for-experimental-design-c25ee0c71e3f'>[Medium Blogpost]</a></span><br>
 						</center>
 					</td>
 				</tr>
